# media-gram-bot

./: alembic.ini  pyproject.toml
bot/: main.py
bot/database/: db.py  downloads.py
bot/handlers/: callbacks.py  start.py
bot/services/: media_service.py  youtube_service.py
migrations/: env.py
migrations/versions/: d910295cd4bd_create_users_table.py
