[project]
name = "telegram-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.6",
    "sherlock-project>=0.16.0",
    "yt-dlp>=2026.3.3",
]
