[project]
name = "telegram-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.6",
    "sherlock-project>=0.16.0",
    "sqlalchemy>=2.0.48",
    "yt-dlp>=2026.3.3",
]
